<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>ru.jpoint</groupId>
	<artifactId>r2dbc-demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>r2dbc-demo</name>
	<description>R2DBC Demo project for JPoint 2022</description>
	<properties>
		<java.version>11</java.version>
		<mapstruct.version>1.4.2.Final</mapstruct.version>
		<jmh.version>1.35</jmh.version>
		<testcontainers.version>1.17.2</testcontainers.version>
	</properties>
	<modules>
		<module>r2dbc-demo-app</module>
		<module>r2dbc-demo-db</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>ru.jpoint</groupId>
				<artifactId>r2dbc-demo-db</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- MapStruct -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjdk.jmh</groupId>
				<artifactId>jmh-core</artifactId>
				<version>${jmh.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjdk.jmh</groupId>
				<artifactId>jmh-generator-annprocess</artifactId>
				<version>${jmh.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
